# oxidecaptcha

./: Cargo.toml  README.md  openapi.yaml
src/: main.rs
src/application/: mod.rs
src/challenge/: mod.rs  parsingerror.rs  siteparameter.rs
src/challenge/prefix/: mod.rs
src/challenge/timestamp/: mod.rs
src/config/: inmemoryconfig.rs  mod.rs
src/errorResponse/: mod.rs
src/error_response/: mod.rs
src/middleware/: auth_middleware.rs  get_challenge_middleware.rs  get_site_middleware.rs  logging_middleware.rs  mod.rs  timeout_middleware.rs
src/routes/: delete_challenge.rs  get_challenge.rs  health.rs  mod.rs  validate_challenge.rs
src/site/: deserialize.rs  lifetime.rs  mod.rs
src/solution/: mod.rs
src/state/: mod.rs
src/storage/: memory.rs  mod.rs  storageprovider.rs
src/storage/storageprovider/: memory.rs
