[package]
name = "oxidecaptcha"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
base64 = "0.22.1"
bytes = "1.7.2"
hex-literal = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
