[package]
name = "oxidecaptcha"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
base64 = "0.22.1"
bytes = "1.7.2"
futures = "0.3.30"
hex-literal = "0.4.1"
indexmap = "2.5.0"
kale_duration = { version = "0.1.3", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
